--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,72 +1,179 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    color: #333;
+:root {
+    --primary-color: #004d40; /* Темно-зеленый */
+    --primary-color-light: #e8f5e9; /* Светло-зеленый */
+    --text-dark: #ffffff; /* Белый текст */
+    --max-width: 1200px;
 }
 
-nav ul {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    font-family: 'Arial', sans-serif;
+    scroll-behavior: smooth;
+}
+
+
+header {
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+    background-color: var(--primary-color);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.nav__header {
+    max-width: var(--max-width);
+    margin: 0 auto;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 1.5rem;
+}
+
+.nav__logo a {
+    color: var(--text-dark);
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.nav__links {
     list-style: none;
-    background-color: #0f574e;
-    padding: 15px;
+    display: flex;
+    gap: 2rem;
+    align-items: center;
     justify-content: center;
 }
 
-nav ul li {
-    margin: 0 15px;
-}
-
-nav ul li a{
-    color: white;
+.nav__links li a {
+    color: var(--text-dark);
     text-decoration: none;
-    font-size: 18px;
-    transition: color 0.3s;
+    font-size: 1rem;
+    transition: color 0.3s ease;
 }
 
-nav ul li a:hover{
-    color: #ddd;
+.nav__links li a:hover {
+    color: var(--primary-color-light);
 }
 
-section{
-    padding: 50px;
+.nav__menu__btn {
+    display: none;
+    font-size: 1.5rem;
+    color: var(--text-dark);
+    cursor: pointer;
+}
+
+nav {
+    overflow: hidden; /* Прячем любые элементы, выходящие за границы */
+}
+
+#home {
+    font-size: 25px;
+    padding: 5rem;
+    color:#ffffff;
+}
+
+/* Адаптивность */
+@media (max-width: 768px) {
+
+    h1 {
+        text-align: center;
+    }
+    .nav__links {
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        background-color: var(--primary-color);
+        padding: 1rem 0;
+        transform: translateY(-150%);
+        transition: transform 0.3s ease-in-out;
+        z-index: -1;
+        
+    }
+
+    .nav__links.open {
+        transform: translateY(0);
+        z-index: 100;
+    }
+
+    .nav__menu__btn {
+        display: block;
+    }
+}
+
+
+
+/* Content main */
+.section__container {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+}
+
+.section__header {
+    padding-top: 2rem;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.section__description {
+    font-size: 1.125rem;
+    color: var(--text-light);
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.advantages__grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 2rem;
+}
+
+.advantage__item {
+    background-color: var(--primary-color-light);
+    padding: 2rem;
+    border-radius: 10px;
     text-align: center;
 }
 
-#main {
-    background-color: #e8f5e9;
+.advantage__item h3 {
+    font-size: 1.5rem;
+    margin-top: 1rem;
 }
 
-#catalog, #offers, #contact, #social {
-    background-color: #f1f1f1;
-    margin-top: 10px;
+.process__steps {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 2rem;
+    text-align: center;
 }
 
-h2 {
-    color: #0f574e;
+.process__steps .step {
+    padding: 2rem;
+    background-color: var(--primary-color-light);
+    border-radius: 10px;
 }
 
-a {
-    color: #0f574e;
-    text-decoration: none;
-    font-weight: bold;
+.process__steps .step h3 {
+    margin-top: 1rem;
+    font-size: 1.25rem;
+
 }
 
-a:hover {
-    text-decoration: underline;
-}
 
-#social p a {
-    font-size: 24px;
-    color: #333;
-    margin: 0 10px;
-}
 
-#social p a:hover {
-    color: #0f574e;
-}
-
-@media (max-width: 768px) {
-    nav ul
-    
-}
