--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOT-HIX</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/images/logo32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/images/logo16x16.png">
+    <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/static/images/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/static/images/android-chrome-512x512.png">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="{{ url_for('static', filename='js/script.js') }}" defer></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#main"></a></li>
-            <li><a href="#catalog"></a></li>
-            <li><a href="#offers"></a></li>
-            <li><a href="#contact"></a></li>
-            <li><a href="#social"></a></li>
-        </ul>
-    </nav>
-    {% block content %}{% endblock %}
+    <header>
+        <nav>
+            <div class="nav__header">
+                <div class="nav__logo">
+                    <a href="/">HOT-HIX</a>
+                </div>
+                <ul class="nav__links">
+                    <li><a href="#home">О нас</a></li>
+                    <li><a href="#catalog">Каталог</a></li>
+                    <li><a href="#faq">FAQ</a></li>
+                    <li><a href="#offers">Наши предложения</a></li>
+                    <li><a href="#contacts">Контакты</a></li>
+                </ul>
+                <div class="nav__menu__btn">
+                    <i class="fas fa-bars"></i>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
 </body>
 </html>
+
+
