--- a/templates/home.html
+++ b/templates/home.html
@@ -57,7 +57,7 @@
         <div class="step">
             <i class="fas fa-paint-brush"></i>
             <h3>Детали заказа</h3>
-            <p>Отправьте любым удобным для вас способом изображения изделий, их краткое описание с указанием материалов и фурнитуры. Уточните размеры тиража, размерные ряды, а также желаемые сроки.</p>
+            <p>Отправьте любым удобным для вас способом изображения изделий, их краткое описание. Уточните размеры тиража, размерные ряды, а также желаемые сроки.</p>
         </div>
         <div class="step">
             <i class="fas fa-scissors"></i>
