--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -78,15 +78,37 @@ nav {
     font-size: 25px;
     padding: 5rem;
     color:#ffffff;
+    
+}
+
+#home p{
+    font-weight: bold;
+    white-space: normal;
 }
 
 #main {
     background-color: var(--primary-color-light);
     border-radius: 10px;
+    padding: 2rem; /* Внутренние отступы */
+    max-width: 1200px; /* Ограничение ширины */
+    margin: 0 auto; /* Центрирование секции */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Лёгкая тень для визуального эффекта */
+}
+
+.header-decor {
+    width: 100%;
+    display: flex;
+    justify-content: center; /* Центрирует линию по горизонтали */
+    align-items: center; /* Центрирует линию по вертикали */
+    margin-top: 2rem; /* Добавляет отступ сверху */
+    margin-bottom: 2rem;
 }
 
 /* Адаптивность */
 @media (max-width: 768px) {
+    #main {
+        padding: 2rem; /* Уменьшение отступов для небольших экранов */
+    }
 
     h1 {
         text-align: center;
@@ -147,6 +169,7 @@ nav {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 2rem;
+    padding: 1rem;
 }
 
 .advantage__item {
@@ -163,22 +186,259 @@ nav {
 
 .process__steps {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Адаптивные колонки */
+    gap: 2rem; /* Отступы между блоками */
+    justify-content: center; /* Центрирование блоков по горизонтали */
     text-align: center;
+    width: 100%; /* Убедитесь, что занимает всю ширину секции */
+    max-width: 1200px; /* Ограничение ширины для центрирования */
+    margin: 0 auto; /* Центрирование секции на странице */
+    padding: 1rem;
 }
 
-.process__steps .step {
+.step {
     padding: 2rem;
     background-color: var(--primary-color-light);
     border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.process__steps .step h3 {
+.step h3 {
     margin-top: 1rem;
     font-size: 1.25rem;
-
 }
 
 
 
+.catalog__section {
+    display: flex;
+    flex-direction: column; /* Разделить заголовок и каталог */
+    align-items: center; /* Выравнивание по центру */
+    padding: 2rem;
+    text-align: center;
+}
+
+.catalog__items {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 2rem;
+}
+
+.catalog__item {
+    flex: 1 1 calc(33.33% - 1rem); /* Три элемента в ряд */
+    max-width: calc(33.33% - 1rem); /* Максимальная ширина */
+    margin: 0.5rem; /* Отступ между элементами */
+    padding: 2rem;
+    color: white;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: relative;
+    text-align: left; /* Текст по левому краю внутри */
+}
+
+.catalog__title {
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.catalog__description {
+    font-size: 1.125rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+
+.catalog__btn {
+    font-size: 1rem;
+    background-color: var(--primary-color);
+    padding: 0.75rem 1.5rem;
+    color: var(--text-dark);
+    border-radius: 10px;
+    transition: 0.3s;
+}
+
+.catalog__btn:hover {
+    background-color: var(--primary-color-light);
+}
+
+#pdfViewer {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+    overflow: hidden; /* Прячем избыточное содержимое */
+}
+
+#pdfCanvas {
+    display: block;
+    height: 80%;
+}
+
+.pdf-container {
+    position: relative;
+}
+
+.pdf-content {  
+    overflow-y: auto; /* Вертикальная прокрутка */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.close-button {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background: red;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    font-size: 18px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 1;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.close-button:hover {
+    background: darkred;
+}
+
+
+.faq__section {
+    width: 80%;
+    margin: 2rem auto;
+    font-family: Arial, sans-serif;
+}
+
+.section__header {
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.faq__item {
+    border-bottom: 1px solid #ccc;
+    padding: 1rem 0;
+    cursor: pointer;
+}
+
+.faq__question {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.25rem;
+    font-weight: bold;
+    color: #333;
+    transition: color 0.3s;
+}
+
+.faq__question:hover {
+    color: #00796b;
+}
+
+.faq__icon {
+    transition: transform 0.3s;
+}
+
+.faq__answer {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease, padding 0.3s ease;
+    padding: 0 1rem;
+    font-size: 1rem;
+    color: #555;
+}
+.faq__item.open .faq__answer {
+    max-height: 150px; /* Достаточно для большого текста */
+    padding: 1rem;
+}
+
+.faq__item.open .faq__icon {
+    transform: rotate(180deg);
+}
+
+
+.offers__section {
+    text-align: center;
+    margin: 2rem 0;
+}
+
+.carousel {
+    display: flex;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.carousel__item:first-child {
+    display: block; /* Показываем первую карточку */
+}
+
+.carousel__item {
+    display: none; /* Прячем карточки по умолчанию */
+    min-width: 100%;
+    transition: transform 0.5s ease-in-out;
+    padding: 2rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background: var(--primary-color-light); /* Заменяем цвет фона на белый */
+    border-radius: 10px;
+    color: var(#333); /* Устанавливаем текст тёмного цвета */
+}
+
+
+.carousel__item h3 {
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    color: var(#333);
+}
+
+.carousel__item p {
+    margin-bottom: 1.5rem;
+    color: var(--text-light);
+}
+
+.carousel__item button {
+    font-size: 1rem;
+    background-color: var(--primary-color);
+    padding: 0.75rem 1.5rem;
+    color: var(--text-dark);
+    border-radius: 10px;
+    transition: 0.3s;
+}
+
+.carousel__controls {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1200px;
+    margin: 1rem auto 0;
+}
+
+.carousel__btn {
+    background: var(--primary-color);
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.carousel__btn:hover {
+    background: var(--primary-color-light);
+}
