SMTP done; privacy continue

--- a/templates/home.html
+++ b/templates/home.html
@@ -251,7 +251,7 @@
             </div>
 
             <div class="contact__item">
-                <p><strong>Почта:</strong> <a href="mailto:poshiv.odejdy@bk.ru">poshiv.odejdy@bk.ru</a></p>
+                <p><strong>Почта:</strong> <a href="mailto:hot-hix@mail.ru">hot-hix@mail.ru</a></p>
             </div>
 
             <div class="social__links">
